--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="select_gender">Select Gender</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="strike_a_pose">Strike a Pose</string>
+    <string name="take_picture">Take Picture</string>
+    <string name="preview_frame">Preview Frame</string>
+    <string name="retake">Retake</string>
 </resources>
